login page on mobile fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -809,4 +809,10 @@ a:link {
 .showarticlebutton {
   width: 94%;
 }
+.logindiv{
+  width: 99%;
+}
+.formlogin{
+  width: 90%;
+}
 }
